--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,17 @@
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
+        "exclude-from-classmap": [
+            "vendor/laravel/ui/auth-backend/RegistersUsers.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Overrides/laravel/RegistersUsers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
