--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
+        "@vue/compiler-sfc": "^3.2.41",
         "axios": "^0.21",
         "bootstrap": "^5.2.2",
         "laravel-mix": "^6.0.6",
@@ -19,9 +20,9 @@
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
-        "vue": "^3.2.36",
-        "vue-loader": "^17.0.0",
-        "vue-template-compiler": "^2.7.10"
+        "vue": "^2.5.17",
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "bootstrap-icons": "^1.9.1",
