--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
-/public/css/*
-/public/js/*
-/public/images/*
-/resources/shared/js/ziggy.js
+/resources/js/ziggy.js
+/public/css/
+/public/js/
+/public/images/
